# part-io

./: .gitignore  AGENT.md  CLAUDE.md  LICENSE  README.md  _check_staged.sh  _git_helper.py  conftest.py  pyproject.toml  sgconfig.yml
.github/workflows/: ci.yml
config/: jscpd.json  jscpd.tests.json  lint.toml  part_io.toml  tasks.toml
config/semgrep/: boundaries.yml  dependencies.yml  golden-rules.yml  scaffold.yml
docs/: .DESCRIPTION.md  CLAUDE.md  INSTRUCTIONS.md  PROPOSAL.md  TODO.md  proposal.md
part_io/: __main__.py
part_io/adapters/: __init__.py  errors.py
part_io/adapters/audio/: __init__.py  ad_segments.py  ad_segments_dp.py  clips.py  evaluation.py  matcher.py  refine_impl.py  refine_plugin.py  snippet_profile.py
part_io/adapters/config/: __init__.py  lint_config_loader.py  task_registry_loader.py
part_io/adapters/lint/: __init__.py  runner.py
part_io/adapters/process/: runner.py
part_io/adapters/reporting/: json_report_writer.py
part_io/adapters/store/: json_store.py
part_io/cli/: __init__.py  audio_ad_detect.py  audio_ad_remove.py  audio_bootstrap.py  audio_detect.py  audio_detect_ads.py  audio_detect_ads_batch.py  audio_locate.py  audio_review.py  audio_review_batch.py  audio_search.py  audio_snippet_profile.py  compile.py  download_unmatched.py  generate_rss.py  main.py  output.py  prompting.py  registry.py  remote_pipeline.py  remote_promote.py  tasks.py
part_io/cli/commands/: __init__.py
part_io/cli/commands/audio/: bootstrap.py  locate.py  search.py
part_io/cli/generate/: compile.py  tasks.py
part_io/cli/lint/: coverage.py  cpd.py  entrypoints.py  execution.py  lizard.py  registry.py  ruff.py  semgrep.py  ty.py  vulture.py
part_io/cli/remote/: _cut.py  _detect.py  _review.py  _state.py
part_io/core/: __init__.py  ports.py
part_io/core/ports/: __init__.py  audio.py  store.py
part_io/models/: __init__.py  lint.py  registry.py  remote_state.py  results.py
part_io/models/pipeline/: __init__.py  config.py  state.py
part_io/models/ports/: __init__.py  config.py  process.py  registry.py  reporting.py
part_io/models/schemas/: generic_state.schema.json  remote_pipeline_state.schema.json
part_io/models/tasks/: __init__.py  lint.py  registry.py  results.py
part_io/services/: audio_bootstrap.py  audio_detection.py  cut_planning.py  lint_orchestrator.py  review_orchestration.py
part_io/utils/: __init__.py  audio_process.py  cache.py  cli.py  config.py  coverage.py  exceptions.py  exec.py  hash.py  main.py  timing.py
partio/: __main__.py
partio/adapters/: main.py
partio/adapters/audio/: __init__.py  clips.py  evaluation.py  matcher.py  playback.py
partio/adapters/feed/: __init__.py  download.py  rss.py
partio/adapters/process/: __init__.py  runner.py
partio/adapters/store/: __init__.py  json_store.py
partio/app/: audio_bootstrap.py  feed_ingest.py  main.py
partio/cli/: __init__.py  main.py  output.py  prompting.py  registry.py  select.py
partio/cli/commands/: __init__.py
partio/cli/commands/audio/: __init__.py  _audition_ui.py  _auditor.py  _section_bar.py  bootstrap.py  locate.py  review.py  search.py
partio/cli/commands/feed/: __init__.py  _store.py  add.py  download.py  list.py  remove.py
partio/core/: __init__.py  audio_bootstrap.py  feed_ingest.py  main.py  ports.py  text.py
partio/core/models/: __init__.py  feed.py
partio/core/ports/: __init__.py  store.py
scripts/: benchmark_timing.py  volume.py
static/rules/: no-guarded-imports.yml  no-io-in-cli-commands.yml  no-type-checking-guard.yml  no-typer-outside-cli.yml
static/rules/ast-grep/: no-guarded-imports.yml  no-noqa.yml
tests/: conftest.py  test_ci_gate.py  test_lint.py  test_rust.py
tests/architecture/: test_architecture_guardrails.py  test_cli_prompts.py  test_cli_shape.py  test_module_length.py
tests/integration/: test_generate_tasks.py  test_lint.py  test_tasks_cli.py
tests/unit/adapters/: test_lint_adapters.py  test_main.py
tests/unit/adapters/audio/: test_clips.py  test_evaluation.py  test_matcher.py  test_playback.py
tests/unit/adapters/feed/: test_download.py  test_rss.py
tests/unit/adapters/process/: test_runner.py
tests/unit/adapters/store/: test_json_store.py
tests/unit/app/: test_audio_bootstrap.py  test_feed_ingest.py  test_main.py
tests/unit/audio/: test_ad_segments.py  test_audio_cli.py  test_audio_clips.py  test_audio_evaluation.py  test_audio_matcher.py  test_audio_matching_accuracy.py  test_detection_control.py  test_snippet_profile.py
tests/unit/cli/: test_audio_bootstrap.py  test_audio_cli.py  test_audio_locate.py  test_audio_review.py  test_audio_search.py  test_cli.py  test_download_unmatched.py  test_generate_rss.py  test_library_cli.py  test_lint_entrypoints.py  test_lint_entrypoints_helper.py  test_lint_execution.py  test_lint_registry.py  test_main.py  test_output.py  test_pipeline_state.py  test_prompting.py  test_registry.py  test_remote_cut.py  test_remote_cut_format.py  test_remote_pipeline.py  test_remote_pipeline_config.py  test_remote_pipeline_loop.py  test_remote_pipeline_stages.py  test_remote_review.py  test_select.py
tests/unit/cli/commands/audio/: test__audition_ui.py  test__auditor.py  test__section_bar.py  test_bootstrap.py  test_locate.py  test_review.py  test_search.py
tests/unit/cli/commands/feed/: test__store.py  test_add.py  test_download.py  test_list.py  test_remove.py
tests/unit/core/: test_audio_bootstrap.py  test_feed_ingest.py  test_main.py  test_text.py
tests/unit/core/models/: test_feed.py
tests/unit/core/ports/: test_store.py
tests/unit/lib/: test_utils_exec_and_coverage.py
tests/unit/models/: test_registry.py
tests/unit/services/: test_audio_bootstrap.py  test_audio_detection.py  test_cut_planning.py  test_refine_plugin.py  test_review_orchestration.py
tests/unit/utils/: test_coverage.py  test_exec.py  test_main.py  test_text.py  test_utils_exec_and_coverage.py
