[project]
name = "part-io"
version = "0.1.0"
description = "Task orchestration and lint automation toolkit for Python repositories."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "part-io Contributors" }]
requires-python = ">=3.11"
dependencies = ["pydantic (>=2.0.0,<3.0.0)", "numpy (>=1.26.0,<3.0.0)"]
keywords = ["python", "cli", "automation", "lint", "tasks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
"part-io-audio-review" = "part_io.cli.audio_review:main"
"part-io-audio-bootstrap" = "part_io.cli.audio_bootstrap:main"


[tool.poetry]
packages = [{ include = "part_io" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.10,<0.16.0)",
    "semgrep (>=1.122.0,<2.0.0)",
    "vulture (>=2.14,<3.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=5.0.0,<7.0.0)",
    "ty (>=0.0.32,<0.0.33)",
    "lizard (>=1.22.1,<2.0.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests/architecture", "tests/integration", "tests/unit"]
pythonpath = ["."]
markers = ["e2e: end-to-end tests requiring external systems"]
addopts = "-m 'not e2e'"

[tool.coverage.run]
parallel = false
data_file = ".coverage"
omit = ["*/__init__.py"]

[tool.coverage.report]
precision = 2

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "A", "B", "S", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/cli/**/*.py" = ["D"]
"**/models/**/*.py" = ["D"]
"**/conftest.py" = ["D"]
# Tests use `assert` idiomatically — S101 is expected.
"tests/**/*.py" = ["S101"]
# Subprocess calls in test infrastructure are intentional and hardcoded.
"conftest.py" = ["S603", "S607"]
"tests/test_lint.py" = ["S603"]
"tests/test_ci_gate.py" = ["S603"]
# Git helper script runs subprocess with hardcoded commands — intentional and safe.
"_git_helper.py" = ["S603"]
# Subprocess call is deliberate; executable is validated by resolve_executable.
"part_io/utils/exec.py" = ["S603"]
# Package init files need no docstring.
"part_io/__init__.py" = ["D104"]
"part_io/services/__init__.py" = ["D104"]

[tool.ty.environment]
python = ".venv"
python-version = "3.11"
extra-paths = []
root = ["."]

[tool.ty.src]
include = ["part_io", "tests"]

[tool.ty.terminal]
error-on-warning = true
output-format = "full"


[tool.importlinter]
root_package = "part_io"
include_external_packages = false

[tool.vulture]
paths = ["part_io", "tests"]
ignore_names = [
    "model_config",
    "validate_*",
    "pytest_sessionstart",
    "pytest_sessionfinish",
]
